fix(modal): remove scroll on ios

--- a/packages/client/src/common/styles/common.css
+++ b/packages/client/src/common/styles/common.css
@@ -14,6 +14,7 @@ html:focus-within {
 
 body,
 #root {
+  width: 100%;
   min-height: 100vh;
 }
 
